ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.4, 2.7.0
    • Affects Version/s: None
    • Component/s: Networking
    • None
    • ALL
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This will help us get stack dumps on all unhandled exceptions on Windows,
      not just those, which occur on non-query threads.

      Original description:

      jsCore/where4.js fails occasionally on Windows, when run with small oplog.

      The cause of the failure is emergency server shutdown due to unhandled exception, which is neither of assertion, MongoDB exception or STL exception.

      Steps to Reproduce: Happens randomly, no specific steps to reproduce other than running the jsCore suite with small oplog.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: