SERVER-13734 Remove catch (...) from handleIncomingMsg

This will help us get stack dumps on all unhandled exceptions on Windows,
not just those, which occur on non-query threads.